Removed dev profile

--- a/account.properties
+++ b/account.properties
@@ -1,2 +1,2 @@
-spring.application.name=prod-account-service
+spring.application.name=account-service
 app.message=welcome to the ${spring.application.name}
